--- a/2_sistemas_y_senales_discretos.ipynb
+++ b/2_sistemas_y_senales_discretos.ipynb
@@ -571,7 +571,8 @@
         "xn1=np.hstack((np.ones(20),xn[:-2]))\n",
         "xn2=np.hstack((np.ones(18),xn))\n",
         "x6=0.001*np.exp(0.5*n)*xn1+10*np.sin(0.05*np.pi*n)*xn2\n",
-        "plt.stem(n,x6)\n"
+        "plt.stem(n,x6)\n",
+        "#edit\n"
       ]
     }
   ],
