--- a/2_sistemas_y_senales_discretos.ipynb
+++ b/2_sistemas_y_senales_discretos.ipynb
@@ -404,6 +404,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#A) Derivacion"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -411,7 +418,18 @@
       },
       "outputs": [],
       "source": [
-        "#derivacion"
+        "#derivacion, Derivar la secuencia x[n]\n",
+        "dxn = np.zeros_like(xn)\n",
+        "dxn[1:6] = xn[1:6] - xn[0:5]  # Derivada en el primer tramo\n",
+        "dxn[7:12] = xn[7:12] - xn[6:11]  # Derivada en el segundo tramo\n",
+        "dxn[13:18] = xn[13:18] - xn[12:17]  # Derivada en el tercer tramo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "B) Subplot con las dos secuencias"
       ]
     },
     {
@@ -422,7 +440,25 @@
       },
       "outputs": [],
       "source": [
-        "#subplots"
+        "# Crear el subplot\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "\n",
+        "# Graficar x[n]\n",
+        "plt.subplot(2, 1, 1)\n",
+        "plt.stem(n, xn)\n",
+        "plt.title('Secuencia Original x[n]')\n",
+        "plt.xlabel('n')\n",
+        "plt.ylabel('x[n]')\n",
+        "\n",
+        "# Graficar la derivada de x[n]\n",
+        "plt.subplot(2, 1, 2)\n",
+        "plt.stem(n, dxn)\n",
+        "plt.title('Derivada de x[n]')\n",
+        "plt.xlabel('n')\n",
+        "plt.ylabel('dx[n]/dn')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
       ]
     },
     {
