--- a/2_sistemas_y_senales_discretos.ipynb
+++ b/2_sistemas_y_senales_discretos.ipynb
@@ -463,6 +463,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Análisis: \n",
+        "la derivada discreta no es exactamente la derivada del caso continuo debido a la naturaleza discreta de la secuencia \n",
+        "\n",
+        "x[n]. En el caso continuo, la derivada representa la tasa de cambio instantánea de una función en cada punto, mientras que en el caso discreto, la derivada se calcula mediante la diferencia entre los valores adyacentes de la función. Esto conlleva a algunas diferencias, especialmente en puntos donde la función presenta discontinuidades, como en los cambios bruscos de pendiente, como en los puntos \n",
+        "n=5 y \n",
+        "n=11\n",
+        "En estos puntos, la derivada discreta muestra picos en lugar de una derivada continua, ya que la diferencia finita no puede capturar perfectamente la característica de la función en esos puntos de discontinuidad."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "oeFHwCVvorOn"
       },
