--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.io"
+    "import scipy.io\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +60,7 @@
        "         -3791.24267578, -3924.6550293 , -4109.94433594]])}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30720"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Vector tiempo\n",
     "Fs=data['Fs'][0][0] #frec de muestreo\n",
@@ -109,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -269,11 +259,13 @@
    "source": [
     " #--> considerar cambiar u por los dos picos en el ciclo 5 y el ciclo 6\n",
     "N_ciclos=15\n",
+    "ciclos=[]\n",
     "for i in range(N_ciclos):\n",
     "    i_t=t[u*i:u*(i+1)]\n",
     "    i_ciclo=filtered[u*i:u*(i+1)]\n",
     "    i_mean=np.round(np.mean(i_ciclo),2)\n",
     "    i_var=np.round(np.var(i_ciclo),2)\n",
+    "    ciclos.append(i_ciclo)\n",
     "    plt.subplot(3,5,i+1)\n",
     "    plt.plot(i_t,i_ciclo)\n",
     "    plt.title(f'ciclo {i+1}')\n",
@@ -297,29 +289,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nada manito, no distribuye normal\n"
+      "Ciclo 1 no distribuye normal\n",
+      "Ciclo 2 no distribuye normal\n",
+      "Ciclo 3 no distribuye normal\n",
+      "Ciclo 4 no distribuye normal\n"
      ]
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
+    "#NORMALIDAD -->sabemos que no es normal por la gráfica.\n",
     "alpha=0.05 #valor de significancia\n",
-    "ciclo_A=filtered[0:u]\n",
-    "ciclo_B=filtered[u:u*2] #va a ser mejor hacer una lista\n",
-    "ciclo_C=filtered[u*2:u*3]\n",
-    "ciclo_D=filtered[u*3:u*4]\n",
-    "[statistic,pvalue]=stats.normaltest(ciclo_A)\n",
+    "for i in range(4): #verificar normalidad de los 4 primeros ciclos\n",
+    "    [statistic,pvalue]=stats.normaltest(ciclos[i])\n",
+    "    if pvalue > alpha:\n",
+    "        print(f'Ciclo {i+1} distribuye normal')\n",
+    "    else:\n",
+    "        print(f'Ciclo {i+1} no distribuye normal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como ninguno tiene una distribución normal, no cumple supuestos para realizar la prueba t."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cumple supuesto de homocedasticidad\n"
+     ]
+    }
+   ],
+   "source": [
+    "#HOMOCEDASTICIDAD \n",
+    "[statistic,pvalue]=stats.levene(ciclos[0],ciclos[1],ciclos[2],ciclos[3])\n",
     "if pvalue > alpha:\n",
-    "    print('normal B)')\n",
+    "    print('Cumple supuesto de homocedasticidad') #varianzas no son significativamente diferentes\n",
     "else:\n",
-    "    print('nada manito, no distribuye normal')"
+    "    print('No cumple supuesto de homocedasticidad')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No existe diferencia significativa entre los ciclos 1 y 2\n",
+      "pvalue=1.357468566416191e-38\n",
+      "Existe diferencia estadística entre los ciclos 3 y 4\n",
+      "pvalue=0.24305131737239127\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Mann-Whitney\n",
+    "#entre ciclos 1 y 2\n",
+    "[statistic,pvalue]=stats.mannwhitneyu(ciclos[0],ciclos[1])\n",
+    "if pvalue > alpha:\n",
+    "    print('Existe diferencia estadística entre los ciclos 1 y 2')\n",
+    "else:\n",
+    "    print('No existe diferencia significativa entre los ciclos 1 y 2') #o es al revés?\n",
+    "print(f'pvalue={pvalue}')\n",
+    "#entre ciclos 3 y 4\n",
+    "[statistic,pvalue]=stats.mannwhitneyu(ciclos[2],ciclos[3])\n",
+    "if pvalue > alpha:\n",
+    "    print('Existe diferencia estadística entre los ciclos 3 y 4')\n",
+    "else:\n",
+    "    print('No existe diferencia significativa entre los ciclos 3 y 4') \n",
+    "print(f'pvalue={pvalue}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[AQUI  VIENE EL ANÁLISIS SOBRE LA ESTACIONARIEDAD]"
    ]
   }
  ],
