prueba para pull

--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -95,7 +95,7 @@
     "#Vector tiempo\n",
     "Fs=data['Fs'][0][0] #frec de muestreo\n",
     "N=np.shape(data['ECG_asRecording'])[1] #cantidad de muestras\n",
-    "t=np.linspace(0,(N/Fs)*60,N) #vector, de 0 a 30min, dividido en la cantidad de muestras"
+    "t=np.linspace(0,(N/Fs)*60,N) #vector, de 0 a 30min (1800s), dividido en la cantidad de muestras"
    ]
   },
   {
