corregida Mann-Whitney

--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -363,14 +363,14 @@
     "#Mann-Whitney\n",
     "#entre ciclos 1 y 2\n",
     "[statistic,pvalue]=stats.mannwhitneyu(ciclos[0],ciclos[1])\n",
-    "if pvalue > alpha:\n",
+    "if pvalue < alpha:\n",
     "    print('Existe diferencia estadística entre los ciclos 1 y 2')\n",
     "else:\n",
-    "    print('No existe diferencia significativa entre los ciclos 1 y 2') #o es al revés?\n",
+    "    print('No existe diferencia significativa entre los ciclos 1 y 2') \n",
     "print(f'pvalue={pvalue}')\n",
     "#entre ciclos 3 y 4\n",
     "[statistic,pvalue]=stats.mannwhitneyu(ciclos[2],ciclos[3])\n",
-    "if pvalue > alpha:\n",
+    "if pvalue < alpha:\n",
     "    print('Existe diferencia estadística entre los ciclos 3 y 4')\n",
     "else:\n",
     "    print('No existe diferencia significativa entre los ciclos 3 y 4') \n",
