--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -36,6 +36,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numprms(x): #x es un array\n",
+    "    x_squared=np.square(x)\n",
+    "    x_mean=np.mean(x_squared)\n",
+    "    xrms=np.sqrt(x_mean)\n",
+    "    return xrms\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
