--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -100,7 +100,7 @@
     "#Vector tiempo\n",
     "Fs=data['Fs'][0][0] #frec de muestreo\n",
     "N=np.shape(data['ECG_asRecording'])[1] #cantidad de muestras\n",
-    "t=np.linspace(0,(N/Fs)*60,N) #vector, de 0 a 30min, dividido en la cantidad de muestras"
+    "t=np.linspace(0,(N/Fs),N) #vector, de 0 a 30min, dividido en la cantidad de muestras"
    ]
   },
   {
@@ -137,7 +137,8 @@
     "plt.title('Filtrada')\n",
     "plt.xlabel('segundos')\n",
     "plt.ylabel('filtered')\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "#d "
    ]
   },
   {
