--- a/3_Analisis_estadistico_de_senales/practica3.ipynb
+++ b/3_Analisis_estadistico_de_senales/practica3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "         -3791.24267578, -3924.6550293 , -4109.94433594]])}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,14 @@
       "Datos del ciclo 2 son estacionarios\n",
       "pvalue=0.42842882476902555\n",
       "ADF=-1.7052125703949992\n",
-      "Datos del ciclo 3 son estacionarios\n",
+      "Datos del ciclo 3 son estacionarios"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "pvalue=0.2645869585865216\n",
       "ADF=-2.0511937027093605\n",
       "Datos del ciclo 4 son estacionarios\n",
