--- a/Proyecto/Seguimiento_1/seguimiento_1.ipynb
+++ b/Proyecto/Seguimiento_1/seguimiento_1.ipynb
@@ -111,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tkeoall(xdata):\n",
     "    tkeoforchannel=[]\n",
-    "    for i in range(1,np.shape(xdata)[1]-1):\n",
+    "    for i in range(1,np.shape(xdata)[1]):\n",
     "        xx=data[:,i]\n",
     "        xtkeo=tkeo(xx)\n",
     "        tkeoforchannel.append(xtkeo)\n",
@@ -156,14 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.44271438e-04, 2.07522392e-08, 3.27787028e+03, 3.64207808e+03,\n",
+       "       3.09181000e+05, 2.07148290e+09, 2.48294000e+05])"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#funcion\n",
     "def caracteristicas(xdata):\n",
     "    carac_canales=[]\n",
-    "    for i in range(1,np.shape(xdata)[1]-1):\n",
+    "    for i in range(1,np.shape(xdata)[1]):\n",
     "        xx=data[:,i]\n",
     "        xrms=rms(xx) #root mean square\n",
     "        xvar=np.var(xx) #varianza\n",
@@ -176,7 +188,8 @@
     "        xzc = len(np.where(np.diff(np.sign(data)))[0]) #zero crossings\n",
     "        carac_canal_actual=[xrms,xvar,xmav,xmavs,xssc,xwl,xzc]\n",
     "        carac_canales.append(carac_canal_actual)\n",
-    "    return np.array(carac_canales)\n"
+    "    return np.array(carac_canales)\n",
+    "caracteristicas(serie1[0])[0]\n"
    ]
   },
   {
@@ -184,6 +197,149 @@
    "metadata": {},
    "source": [
     "4. Crear una rutina que aplique sobre todo los archivos de la base de datos las funciones descritas en 2 y 3 (5 %)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ruta=os.getcwd()\n",
+    "archivo_prueba=os.listdir(ruta+'/EMG_data_for_gestures-master')\n",
+    "serie1=[]\n",
+    "serie2=[]\n",
+    "for i in archivo_prueba[0:-1]: #carga solo los canales\n",
+    "    v=os.listdir(ruta+'/EMG_data_for_gestures-master'+'/'+i)\n",
+    "    x1=np.loadtxt(ruta+'/EMG_data_for_gestures-master'+'/'+i+'/'+v[0],skiprows=1,delimiter='\\t',usecols=range(1,9))\n",
+    "    x2=np.loadtxt(ruta+'/EMG_data_for_gestures-master'+'/'+i+'/'+v[1],skiprows=1,delimiter='\\t',usecols=range(1,9))\n",
+    "    serie1.append(x1)\n",
+    "    serie2.append(x2)\n",
+    "#serie1[0][:,0] -->  primer canal del primer archivo del sujeto 01\n",
+    "#serie1[0]\n",
+    "tkeo_sujetos=[]\n",
+    "for i in range(0,len(serie1)):\n",
+    "    tkeo_sujetos.append(np.stack((tkeoall(serie1[i]),tkeoall(serie2[i])))) #queda guardado de la siguiente forma: (serie,canal,mediciones)\n",
+    "carac_sujetos=[]\n",
+    "for i in range(0,len(serie1)):\n",
+    "    carac_sujetos.append(np.stack((caracteristicas(serie1[i]),caracteristicas(serie2[i])))) #queda guardado de la siguiente forma: (serie,canal,caracteristicas)\n",
+    "  \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Crear una rutina que aplique sobre todo los archivos de la base de datos las función 3 sobre las señales originales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(tkeo_sujetos)\n",
+    "#print(tkeo_sujetos[35])\n",
+    "caracs_serie1=[]\n",
+    "for i in tkeo_sujetos:\n",
+    "    arr=np.transpose(i)[0,:,:]\n",
+    "\n",
+    "    caracs_serie1.append(caracteristicas(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.44271438e-04, 2.07522392e-08, 3.27787028e+03, 3.64207808e+03,\n",
+       "       3.09181000e+05, 2.07148290e+09, 2.48294000e+05])"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caracs_serie1[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados a lo largo de las columnas: [12 15 18]\n",
+      "Resultados a lo largo de las filas: [ 6 15 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Definir una función que será aplicada a lo largo de un eje específico\n",
+    "def mi_funcion(x):\n",
+    "    # Por ejemplo, calculamos la suma de los elementos en cada fila\n",
+    "    return np.sum(x)\n",
+    "\n",
+    "# Supongamos que tienes un arreglo multidimensional llamado 'arr'\n",
+    "arr = np.array([[1, 2, 3],\n",
+    "                [4, 5, 6],\n",
+    "                [7, 8, 9]])\n",
+    "\n",
+    "# Aplicar la función a lo largo del eje 0 (columnas)\n",
+    "resultados_columnas = np.apply_along_axis(mi_funcion, axis=0, arr=arr)\n",
+    "print(\"Resultados a lo largo de las columnas:\", resultados_columnas)\n",
+    "\n",
+    "# Aplicar la función a lo largo del eje 1 (filas)\n",
+    "resultados_filas = np.apply_along_axis(mi_funcion, axis=1, arr=arr)\n",
+    "print(\"Resultados a lo largo de las filas:\", resultados_filas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.shape(tkeo_sujetos[0]))\n",
+    "#tkeo_sujetos[0]\n",
+    "plt.subplot(211)\n",
+    "plt.plot(t,serie1[0][:,0])\n",
+    "plt.subplot(212)\n",
+    "plt.plot(t,tkeo_sujetos[0][0,0,:])\n",
+    "plt.axis([t[0],t[-1],np.min(tkeo_channel_1[1:-1]),np.max(tkeo_channel_1[1:-1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(serie1)"
    ]
   }
  ],
