--- a/Proyecto/Seguimiento_1/seguimiento_1.ipynb
+++ b/Proyecto/Seguimiento_1/seguimiento_1.ipynb
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x168143a0>]"
+       "[<matplotlib.lines.Line2D at 0x19a390a0>]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
     "#funcion\n",
-    "def caracteristicas(xdata): \n",
+    "def caracteristicas(data): \n",
     "    carac_canales=[]\n",
-    "    for i in range(0,np.shape(xdata)[1]): #tal vez se pueda usar apply_along_axis para calcular todas\n",
+    "    for i in range(0,np.shape(data)[1]): #tal vez se pueda usar apply_along_axis para calcular todas\n",
     "        xx=data[:,i]\n",
     "        xrms=rms(xx) #root mean square\n",
     "        xvar=np.var(xx) #varianza\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,10 +233,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 258,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Sujeto  Canal Caracteristica      Sin TKEO      Con TKEO\n",
+      "0          1      1            RMS  3.785799e+04  7.220306e-08\n",
+      "1          1      1            VAR  3.588632e+08  5.197030e-15\n",
+      "2          1      1            MAV  3.641943e+03  5.553921e-09\n",
+      "3          1      1           MAVS  4.097186e+03  6.202341e-09\n",
+      "4          1      1            SSC  2.671750e+05  4.242500e+04\n",
+      "...      ...    ...            ...           ...           ...\n",
+      "2011      36      8            MAV  3.046029e+03  4.746336e-09\n",
+      "2012      36      8           MAVS  3.426782e+03  6.231854e-09\n",
+      "2013      36      8            SSC  2.183920e+05  3.546700e+04\n",
+      "2014      36      8            WFL  1.436233e+09  2.285408e-03\n",
+      "2015      36      8             ZC  1.743660e+05  2.796000e+04\n",
+      "\n",
+      "[2016 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "datos = {'Sujeto':[],'Canal':[],'Caracteristica':[],'Sin TKEO':[],'Con TKEO':[]}\n",
+    "meds=['RMS','VAR','MAV','MAVS','SSC','WFL','ZC']\n",
+    "for sujeto in range(0,36):\n",
+    "    for canal in range(0,8):\n",
+    "        for medida in range(0,7):\n",
+    "            datos['Sujeto'].append(sujeto+1)\n",
+    "            datos['Canal'].append(canal+1)\n",
+    "            datos['Caracteristica'].append(meds[medida])\n",
+    "            datos['Sin TKEO'].append(carac_serie1[sujeto][canal][medida])  # Supongamos que son datos aleatorios\n",
+    "            datos['Con TKEO'].append(carac_tkeo_serie1[sujeto][canal][medida])\n",
+    "\n",
+    "df=pd.DataFrame(datos) \n",
+    "\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,9 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.22030630e-08 5.19702998e-15 5.55392133e-09 6.20234056e-09\n",
+      " 4.24250000e+04 2.74374180e-03 3.29980000e+04]\n",
+      "[3.78579858e+04 3.58863230e+08 3.64194342e+03 4.09718633e+03\n",
+      " 2.67175000e+05 2.07140630e+09 1.99864000e+05]\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
