análisis y discusión de resultados

--- a/Proyecto/Seguimiento_1/seguimiento_1.ipynb
+++ b/Proyecto/Seguimiento_1/seguimiento_1.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Crear una función que reciba la señal de EMG y permita aplicar el operador Teager-Kaiser Energy Operator (TKEO)."
+    "**1. Crear una función que reciba la señal de EMG y permita aplicar el operador Teager-Kaiser Energy Operator (TKEO).**"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Crear una función que reciba una señal EMG de múltiples canales y calcule el operador TKEO para cada canal."
+    "**2. Crear una función que reciba una señal EMG de múltiples canales y calcule el operador TKEO para cada canal.**"
    ]
   },
   {
@@ -76,14 +76,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Crear una función que reciba una señal EMG de múltiples canales que extraiga las siguientes características para cada canal (10 %):\n",
-    "   -  RMS\n",
-    "   -  Varianza\n",
-    "   -  Mean Absolute Value\n",
-    "   -  Mean Absolute Value Slope\n",
-    "   -  Slope Sign Changes\n",
-    "   -  Wave form length\n",
-    "   -  Zero Crossing"
+    "**3. Crear una función que reciba una señal EMG de múltiples canales que extraiga las siguientes características para cada canal (10 %):**\n",
+    "   -  **RMS**\n",
+    "   -  **Varianza**\n",
+    "   -  **Mean Absolute Value**\n",
+    "   -  **Mean Absolute Value Slope**\n",
+    "   -  **Slope Sign Changes**\n",
+    "   -  **Wave form length**\n",
+    "   -  **Zero Crossing**"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Crear una rutina que aplique sobre todo los archivos de la base de datos las funciones descritas en 2 y 3 (5 %)"
+    "**4. Crear una rutina que aplique sobre todo los archivos de la base de datos las funciones descritas en 2 y 3 (5 %)**"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Almacene las métricas obtenidas en el ítem 4 y 5 en un dataframe, en donde haya una columna que discrimine si las características provienen de una señal con TKEO o sin TKEO."
+    "**6. Almacene las métricas obtenidas en el ítem 4 y 5 en un dataframe, en donde haya una columna que discrimine si las características provienen de una señal con TKEO o sin TKEO.**"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Realice un análisis exploratorio de los datos (Estadística descriptiva) teniendo como base la teoría vista en clase (Diagramas de cajas, gráficos, medidas de tendencia central)"
+    "**7. Realice un análisis exploratorio de los datos (Estadística descriptiva) teniendo como base la teoría vista en clase (Diagramas de cajas, gráficos, medidas de tendencia central)**"
    ]
   },
   {
@@ -378,6 +378,15 @@
     "\n",
     "# Mostrar la figura\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Diferencias entre señal filtrada y sin filtrar**\n",
+    "\n",
+    "La señal TKEO muestra los datos de la forma que se puede apreciar mejor cuando hubo un cambio significativo de la señal, que puede atribuirse a la contracción de un músculo y por tanto al momento en que se hizo un gesto. Como consecuencia, esta señal está en su mayor parte compuesta por valors cercanos a cero, pues se encarga de reducir aquellos que no son un cambio significativo, que en este contexto se atribuye a ruido."
    ]
   },
   {
@@ -558,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. Hacer un breve resumen sobre la electromiografía y las características de esta señal."
+    "**a. Hacer un breve resumen sobre la electromiografía y las características de esta señal.**"
    ]
   },
   {
@@ -585,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b. Hacer una breve descripción del operador de TKEO, que información entrega y cómo se interpreta con los datos entregados."
+    "**b. Hacer una breve descripción del operador de TKEO, que información entrega y cómo se interpreta con los datos entregados.**"
    ]
   },
   {
@@ -602,6 +611,49 @@
     "señal de entrada debido a que debe realizarse un desplazamiento de la señal. Sin embargo, dada la cantidad de datos, estos \n",
     "valores no son significativos y por tanto pueden omitirse. Para la realización de análisis sobre la señal filtrada \n",
     "también se deben ignorar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**d) Planteamiento de las hipótesis nulas y alternativas, selección del tipo de prueba (paramétrica o no paramétrica) y discusión de los resultados.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dado que la naturaleza del proyecto consiste en la identificación de los gestos a partir de señales EMG, el análisis que consideramos apropiado para hacer una caracterización inicial de los datos se puede realizar por medio de la evaluación de los valores asociados a la clasificación por clases (1-7). En este sentido, un análisis estadístico inicial puede consistir en determinar si estos datos en todos los sujetos, por clase, son estacionarios o no estacionarios. Para esto se debe de verificar previamente que estos grupos de datos cumplan los supuestos de normalidad y homocedasticidad (Ya asumimos que son independientes) para determinar qué tipo de prueba conviene aplicarse sobre ellos, sea paramétrica o no paramétrica.\n",
+    "Por otro lado, dado que se tienen dos señales (una filtrada y otra no filtrada), consideramos más apropiado realizar los análisis en un primer momento sobre las señales a las cuales se les haya aplicado el filtro TKEO puesto que así podemos identificar más fácilmente valores significativos en la señal.\n",
+    "\n",
+    "Para comprobar los supuestos, se debe realizar una prueba de kolmogorov para evaluar normalidad debido a la gran cantidad de datos y para comprobar homocedasticidad se debe realizar una prueba de Levene entre datos de similar clasificación (canal y clase). De entrada se sabe que estos datos no distribuirán normal por la naturaleza de la señal.\n",
+    "\n",
+    "Hechas las pruebas, se deben tener suficientes motivos para realizar una prueba no paramétrica para determinar la estacionariedad de los datos, o de otra manera, poder plantear que los mismos segmentos de los canales para los diferentes sujetos son lo suicientemente similares para empezar a construir un modelo del gesto para su identificación. Para esto se debe realizar entonces una prueba de Mann Whitney entre los mismos fragmentos de datos tomados por los mismos sensores entre los sujetos. En caso de que se cumplan los supuestos, se aplica entonces la prueba t."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[esta casilla se pone después de los análisis de las pruebas de normalidad y homocedasticidad]**\n",
+    "\n",
+    "\n",
+    "Como primer abordaje al análisis, se aplica el procedimiento planteado anteriormente divividiendo la señal de cada canal en tres partes para poder determinar estadísticamente el peso que tienen los datos en reposo sobre los fragmentos de la señal que corresponden a contracciones musculares, esto con el fin de determinar si es posible realizar los análisis de una manera más directa sobre los datos y para tener en cuenta a los datos no marcados (de clase 0) para luego tener algunas bases para su clasificación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**c) Discusión de las diferencias en los grupos usando las gráficas obtenidas. Seleccione el tipo de representación que mejor le permita describir la información.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "una parte está después de las gráficas de la señal normal y con tkeo. La otra ya la hago, para mostrar diferencias en señales de diferentes canales (si las hay xd)"
    ]
   }
  ],
@@ -621,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
